# SIMD-Optimized-Moving-Average-Benchmark

./: CMakeLists.txt  README.md  main.cpp
